Sun Sep 27 20:01:20 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (TESTS): Added parse.test.
	* parse.test: New file.

Sat Sep 26 19:17:43 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.test: Put AM_INIT_AUTOMAKE into configure.in.
	* library.test: Use AC_EXEEXT.
	* texinfo5.test: Use AC_EXEEXT.
	* Many files: use AC_PROG_INSTALL, not AM_PROG_INSTALL.

	Test suite updates for the @SHELL@ change:
	* exsource.test: Set SHELL on `make' command line.
	* ansi.test: Set SHELL on `make' command line.
	* texinfo.test: Set SHELL on `make' command line.
	* insh2.test: Set SHELL on `make' command line.
	* empty.test: Rewrite @SHELL@ to /bin/sh.

Tue Sep 22 01:20:00 1998  Tom Tromey  <tromey@cygnus.com>

	* ansi3.test: Use gcc and not gcc -traditional.

Tue Sep 15 22:19:48 1998  Tom Tromey  <tromey@cygnus.com>

	* texinfo7.test: New file.

Sun Aug 16 23:17:38 1998  Tom Tromey  <tromey@cygnus.com>

	* colon6.test: New file.

Fri Aug 14 11:09:03 1998  Tom Tromey  <tromey@cygnus.com>

	* cond6.test: New file.

Mon Aug 10 21:05:15 1998  Tom Tromey  <tromey@cygnus.com>

	* ansi3.test: New file.

Sat Jul 18 00:27:26 1998  Tom Tromey  <tromey@cygnus.com>

	* recurs.test: New file.

	* cond3.test: Changed to match recent fixes.

Fri Jul 17 23:44:49 1998  Tom Tromey  <tromey@cygnus.com>

	* cond4.test, cond5.test: New files.

Tue May 26 01:44:37 1998  Tom Tromey  <tromey@cygnus.com>

	* syntax.test: New file.

Sun Apr  5 15:26:42 1998  Tom Tromey  <tromey@cygnus.com>

	* version3.test: Increased version number to ensure failure for a
	long time to come.

	* library.test: New file.

	* lex2.test: Updated since lex error changed to warning.

Fri Apr  3 13:04:50 1998  Tom Tromey  <tromey@cygnus.com>

	* colon5.test: New file.

	* exdir2.test: New file.
	* instdata.test: New file.

Wed Mar 25 15:30:39 1998  Tom Tromey  <tromey@cygnus.com>

	* badopt.test: new file.
	* version3.test: New file.

Mon Mar 23 10:52:36 1998  Tom Tromey  <tromey@cygnus.com>

	* libobj8.test: New file.
