@@ -1,0 +1,22 @@
+#! /bin/sh
+
+# Test to make sure line numbers are correct in some error reports.
+
+. $srcdir/defs || exit 1
+
+echo 'AM_CONDITIONAL(FOO, true)' >> configure.in
+
+cat > Makefile.am << 'END'
+# flag to tell us if apache dir is a source distribution
+APACHE_DIR_IS_SRC = @APACHE_DIR_IS_SRC@
+
+# we only need to descend into the c dir if we're doing a 1.3 DSO configuration
+ifeq ("${APACHE_DIR_IS_SRC}","yes")
+SUBDIRS = java 
+else
+SUBDIRS = c java
+endif
+END
+
+$AUTOMAKE > out 2>&1 && exit 1
+grep :7: out
