@@ -1,5 +1,8 @@
 Sun Sep 27 20:01:20 1998  Tom Tromey  <tromey@cygnus.com>
 
+	* Makefile.am (TESTS): Added else.test.
+	* else.test: New file.
+
 	* Makefile.am (TESTS): Added parse.test.
 	* parse.test: New file.
 
